--- a/src/main/resources/templates/support/support.html
+++ b/src/main/resources/templates/support/support.html
@@ -29,23 +29,23 @@
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
-							<th>ID</th>
 							<th>Assunto</th>
 							<th>Categoria</th>
 							<th>Status</th>
 							<th>Atualização</th>
+							<th>Criação</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr class="align-middle" th:each="ticket : ${tickets}">
-							<td th:text="${ticket.id}"></td>
 							<td>
 								<a href="#" class="link-dark" th:href="@{/support/ticket/{id}(id=${ticket.id})}"
-									th:text="${ticket.title}"></a>
+									th:text="|#${ticket.id} - ${ticket.title}|"></a>
 							</td>
 							<td th:text="${ticket.category.displayName}"></td>
 							<td th:text="${ticket.status.displayName}"></td>
 							<td th:text="${#dates.format(ticket.updateDate, 'dd/MM/yyyy HH:mm')}"></td>
+							<td th:text="${#dates.format(ticket.creationDate, 'dd/MM/yyyy HH:mm')}"></td>
 						</tr>
 					</tbody>
 				</table>
