Fix uploading Questions and Topics

--- a/src/main/resources/templates/admin/topic-edit.html
+++ b/src/main/resources/templates/admin/topic-edit.html
@@ -19,8 +19,8 @@
 
 <body>
 	<div class="container mt-4">
-		<div class="alert alert-success alert-dismissible fade show" role="alert" th:if="${!#strings.isEmpty(message)}">
-			<span th:text=${message}></span>
+		<div class="alert alert-error alert-dismissible fade show" role="alert" th:if="${!#strings.isEmpty(message)}">
+			<span class="text-center" th:utext=${message}></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 
