--- a/src/main/resources/templates/users/question-edit.html
+++ b/src/main/resources/templates/users/question-edit.html
@@ -141,7 +141,7 @@
 					</div>
 
 					<div class="d-grid gap-2 col-4 mx-auto">
-						<button type="submit" class="btn btn-danger">
+						<button id="updateQuestionButton" type="submit" class="btn btn-danger" style="display: none;">
 							Atualizar <i class="fa fa-pencil ms-3" aria-hidden="true"></i>
 						</button>
 					</div>
@@ -174,6 +174,13 @@
 					}
 				});
 			});
+			
+			const questionStatus  = /*[[${question.status}]]*/null;
+			if (questionStatus === 'EDITABLE') {
+				$('#updateQuestionButton').show();
+			} else {
+				$('#updateQuestionButton').closest('div').remove();
+			}
 		})();
 	</script>
 
