--- a/src/main/resources/templates/users/topic-edit.html
+++ b/src/main/resources/templates/users/topic-edit.html
@@ -75,15 +75,16 @@
 						<div class="col-md-6 mb-3">
 							<label class="form-label fw-bold" for="status">Disciplina</label>
 
-							<select class="form-select" id="subject" name="subject" disabled>
-								<option th:value="${topic.subject.id}" th:text="${topic.subject.name}" selected></option>
+							<select class="form-select" id="subject" name="subject" th:field="*{subject.id}">
+								<option th:each="subject : ${subjects}" th:value="${subject.id}" th:text="${subject.name}"
+									th:selected="${subject == topic.subject}"></option>
 							</select>
 						</div>
 						<div class="col-md-6">
 							<label class="form-label fw-bold mt-2">Obrigatório para a conclusão da Disciplina?</label>
 
 							<div class="form-check">
-								<input id="required" class="form-check-input" type="checkbox" th:checked="${topic.required}" disabled>
+								<input id="required" class="form-check-input" type="checkbox" th:checked="${topic.required}">
 								<label for="required" class="form-check-label">Obrigatório</label>
 							</div>
 						</div>
@@ -147,9 +148,6 @@
 				});
 			} else {
 				new Quill('#topic-body-editor', EditorOptions.READ_ONLY);
-				$('input').prop('disabled', true);
-				$('textarea').prop('disabled', true);
-				$('select').prop('disabled', true);
 				$('button[type="submit"]').closest('div').remove();
 			}
 		})();
