--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -95,7 +95,7 @@
 						</div>
 
 						<div class="dropdown">
-							<button type="button" class="btn btn-outline-light dropdown-toggle"
+							<button id="userOptionsButton" type="button" class="btn btn-outline-light dropdown-toggle"
 								data-bs-toggle="dropdown" aria-expanded="false">
 								<i class="fa fa-user-circle" aria-hidden="true"></i>
 							</button>
@@ -115,7 +115,7 @@
 								<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar Perfil</a>
 								<a class="dropdown-item" href="#" th:href="@{/users/account}">Conta</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" th:href="@{/user/messages}">Mensagens</a>
+								<a id="messagesDropdownItem" class="dropdown-item" href="#" th:href="@{/user/messages}">Mensagens</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" th:href="@{/support}">Suporte</a>
 								<div class="dropdown-divider"></div>
