--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -13,6 +13,10 @@
 							<div class="card-body">
 								<i class="bi bi-person-circle" style="font-size: 110px;"></i>
 								<h5 class="card-title text-center border-top pt-3" th:text="${user.fullName}">Nome</h5>
+								<div th:if="${currentUser != user}">							
+									<hr>
+									<a class="btn btn-sm btn-danger" href="#" th:href="@{/messages(user=${user.email})}">Enviar mensagem</a>
+								</div>
 							</div>
 						</div>
 					</div>
