Add user description field

--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -7,7 +7,7 @@
 	<div class="container-fluid col-md-10 mt-5">
 		<div class="card">
 			<div class="card-body">
-				<div class="row text-center fw-bold">
+				<div class="row text-center">
 					<div class="col-md-4">
 						<div class="card h-100">
 							<div class="card-body">
@@ -17,10 +17,11 @@
 									<hr>
 									<a class="btn btn-sm btn-danger" href="#" th:href="@{/messages(user=${user.email})}">Enviar mensagem</a>
 								</div>
+								<p th:text="${user.description}"></p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 fw-bold">
 						<div class="card h-100">
 							<div class="card-header bg-white">Resumo</div>
 							<div class="card-body">
@@ -43,7 +44,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 fw-bold">
 						<div class="card h-100">
 							<div class="card-header bg-white">Outras informações</div>
 							<div class="card-body">
