--- a/src/main/resources/templates/users/edit-profile.html
+++ b/src/main/resources/templates/users/edit-profile.html
@@ -30,8 +30,8 @@
 						<input type="hidden" id="email" class="form-control" th:field="*{email}" disabled>
 					</div>
 
-					<div class="row mb-4">
-						<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-6 mb-3">
 							<label for="email" class="form-label">Data de Nascimento</label>
 							<input type="date" id="birthDate" class="form-control" th:field="*{birthDate}">
 						</div>
@@ -44,6 +44,15 @@
 									th:text="${gender.displayName}" th:selected="${gender == user.gender}"></option>
 							</select>
 						</div>
+					</div>
+					
+					<div class="mb-3">
+						<label for="description" class="form-label">Biografia</label>
+						<textarea class="form-control" maxlength="100" th:field="*{description}"
+							th:classappend="${#fields.hasErrors('description')}? 'is-invalid'" aria-describedby="descriptionFeedback"></textarea>
+
+						<div id="descriptionFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('description')}"
+							th:errors="*{description}">Mensagem de erro</div>
 					</div>
 					
 					<div class="mb-4">
