--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -83,10 +83,10 @@
 			<div class="accordion-item">
 				<h6 class="accordion-header" id="headingTwo">
 					<button id="contributeAccordionButton"
-						class="accordion-button collapsed bg-danger text-white fw-bold" type="button"
+						class="accordion-button collapsed bg-danger text-white" type="button"
 						data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-						aria-controls="collapseTwo" style="height: 50px">
-						<h6>Deseja compartilhar seu conhecimento? Crie uma nova Questão!</h6>
+						aria-controls="collapseTwo">
+						Deseja compartilhar seu conhecimento? Crie uma nova Questão!
 					</button>
 				</h6>
 				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
