--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -116,6 +116,7 @@
 								<a class="dropdown-item" href="#" th:href="@{/users/account}">Conta</a>
 								<div class="dropdown-divider"></div>
 								<a id="messagesDropdownItem" class="dropdown-item" href="#" th:href="@{/messages}">Mensagens</a>
+								<a id="messagesDropdownItem" class="dropdown-item" href="#" th:href="@{/notifications}">Notificações</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" th:href="@{/support}">Suporte</a>
 								<div class="dropdown-divider"></div>
