--- a/src/main/resources/templates/admin/subjects.html
+++ b/src/main/resources/templates/admin/subjects.html
@@ -49,16 +49,6 @@
 							</div>
 	
 							<div class="mb-3">
-								<label class="form-label" for="description">Ementa</label>
-	
-								<textarea id="description" class="form-control" th:field="*{description}" rows="3" maxlength="1000">
-								</textarea>
-	
-								<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
-									inválida</span>
-							</div>
-	
-							<div class="mb-3">
 								<label class="form-label" for="objective">Objetivo</label>
 	
 								<textarea id="objective" class="form-control" th:field="*{objective}" rows="2" maxlength="500">
@@ -67,7 +57,17 @@
 								<span class="text-danger" th:if="${#fields.hasErrors('objective')}" th:errors="*{objective}">Objetivo
 									inválido</span>
 							</div>
+							
+							<div class="mb-3">
+								<label class="form-label" for="description">Ementa</label>
 	
+								<textarea id="description" class="form-control" th:field="*{description}" rows="3" maxlength="1000">
+								</textarea>
+	
+								<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
+									inválida</span>
+							</div>
+							
 							<button type="submit" class="btn btn-danger form-control">Cadastrar</button>
 						</form>
 					</div>
@@ -131,7 +131,7 @@
 									</div>
 									<div class="col-md-2 d-flex justify-content-center align-items-center">
 										<div class="form-check align-middle mt-3" style="font-size: 1.2rem;">
-											<input class="form-check-input bg-success" type="checkbox" value="" id="updatedEnabled" 
+											<input class="form-check-input" type="checkbox" value="" id="updatedEnabled" 
 												title="Com está opção desmarcada a disciplina não ficará visivél para os alunos.">
 										  	<label class="form-check-label" for="updatedEnabled">
 										    	Ativa? 
@@ -141,13 +141,13 @@
 								</div>
 	
 								<div class="mb-3">
-									<label for="description" class="form-label">Descrição</label>
-									<textarea id="updatedDescription" class="form-control" rows="3" maxlength="1000" required></textarea>
-								</div>
-	
-								<div class="mb-3">
 									<label for="updatedObjective" class="form-label">Objetivo</label>
 									<textarea id="updatedObjective" class="form-control" rows="2" maxlength="500" required></textarea>
+								</div>
+								
+								<div class="mb-3">
+									<label for="description" class="form-label">Ementa</label>
+									<textarea id="updatedDescription" class="form-control" rows="3" maxlength="1000" required></textarea>
 								</div>
 							</div>
 							<div class="modal-footer">
