--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -36,14 +36,16 @@
 				<h3 class="card-title text-center fw-bolder" th:text="${subject.code} + ' - ' +${subject.name}"></h3>
 
 				<div class="col-10 offset-1">
-					<div class="mb-3">
+					<div class="mb-2">
+						<h6 class="d-inline">Objetivo:</h6>
+						<span th:text="${subject.objective}"></span>
+					</div>
+					
+					<div class="mb-2">
 						<h6 class="d-inline">Ementa:</h6>
 						<span th:text="${subject.description}"></span>
 					</div>
-
-					<h6 class="d-inline">Objetivo:</h6>
-					<span th:text="${subject.objective}"></span>
-
+					
 					<div class="d-flex justify-content-end mt-3">
 						<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
 							<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
