--- a/src/main/resources/templates/subjects/dashboard.html
+++ b/src/main/resources/templates/subjects/dashboard.html
@@ -42,7 +42,7 @@
 								supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 						</div>
 						<div class="card-footer">
-							<div th:with="progress=${subject.user.progress}">
+							<div th:with="progress=${subject.userStats.progress}">
 								<div class="progress text-center" style="height: 10px;">
 									<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
 										aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
@@ -94,7 +94,7 @@
 						</div>
 					</div>
 					<div class="card-footer">
-						<div th:with="progress=${subject.user.progress}">
+						<div th:with="progress=${subject.userStats.progress}">
 							<div class="progress text-center" style="height: 10px;">
 								<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
 									aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" th:style="'width: ' + ${progress} + '%'"
